--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     // console.log(Moment);
     "esModuleInterop": true,
     // Если какая-либо библиотека не имеет default import,
-    // лоадеры вроде ts-loader или babel-loader автоматически создают их
+    // loaders вроде ts-loader или babel-loader автоматически создают их
     // вместо такого импорта
     // import * as React from 'react';
     // можно писать такой
