--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -72,8 +72,8 @@
     "jest": "^27.5.1",
     "json-server": "^0.17.0",
     "loki": "^0.28.1",
+    "madge": "^5.0.1",
     "mini-css-extract-plugin": "^2.5.3",
-    "react-refresh": "^0.12.0",
     "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
@@ -87,8 +87,7 @@
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "madge": "^5.0.1"
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
