--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "npx webpack serve --env port=3000",
     "build:prod": "npx webpack --env mode=production",
     "build:dev": "npx webpack --env mode=development",
+    "lint": "eslint **/*.{ts,tsx}",
+    "lint-fix": "eslint **/*.{ts,tsx} --fix",
     "circular-deps-check": "npx madge --circular src --extensions ts,tsx --ts-config ./tsconfig.json"
   },
   "repository": {
