--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,8 @@
   "trailingComma": "all",
   "singleQuote": true,
   "printWidth": 120,
-  "tabWidth": 2,
+  "tabWidth": 4,
   "parser": "typescript",
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "endOfLine": "auto"
 }
